force-app/main/default/objects/ssot__FiscalCalendar__dlm/fields/ssot__FiscalQuarterFirstDayDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__FiscalQuarterFirstDayDate__c</fullName>
    <label>Fiscal Quarter First Day</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FiscalQuarterFirstDayDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>