force-app/main/default/objects/ssot__FiscalCalendar__dlm/fields/ssot__FiscalWeekFirstDayDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__FiscalWeekFirstDayDate__c</fullName>
    <label>Fiscal Week First Day</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FiscalWeekFirstDayDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>