force-app/main/default/objects/ssot__FiscalCalendar__dlm/fields/ssot__FiscalYearFirstDayDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__FiscalYearFirstDayDate__c</fullName>
    <label>Fiscal Year First Day</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FiscalYearFirstDayDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>