force-app/main/default/objects/ssot__FiscalCalendar__dlm/fields/ssot__QuarterNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__QuarterNumber__c</fullName>
    <label>Quarter</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>QuarterNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>